# zhuangchunjiang

./: .gitignore  LICENSE  README.md  config.orig.toml  env.example  pyproject.toml  requirements.txt
chunk/patisambhidamagga/: 01_1.txt  01_10.txt  01_2.txt  01_3.txt  01_4.txt  01_5.txt  01_6.txt  01_7.txt  01_8.txt  01_9.txt  02.txt  02_1.txt  02_2.txt  03.txt  03_1.txt  03_2.txt  04.txt  04_1.txt  04_2.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  (+6 more)
html/dn/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  20.html  21.html  25.html  26.html  27.html  28.html  29.html  30.html  32.html  33.html  34.html  meta.toml
html/dn1/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  11.html  12.html  13.html  meta.json  meta.toml  para_map.jsonl
html/dn2/: 14.html  15.html  16.html  17.html  18.html  19.html  20.html  21.html  22.html  23.html  meta.toml
html/dn3/: 24.html  25.html  26.html  28.html  29.html  30.html  31.html  32.html  33.html  34.html  meta.toml
html/khuddakapatha/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  meta.json
html/milinda/: 001.html  002.html  003.html  004.html  005.html  006.html  007.html  008.html  009.html  (+30 more)
jsonl/: glossary.csv  meta.json
src/: 01_download.py  02_align.py  03_scan_paragraphs.py  04_extract_notes.py  llm_align.py
(+2296 files in other folders)
