[project]
name = "dahlia"
version = "2026.5.8"
authors = [
    { name = "Visuddhinanda", email = "visuddhinanda@gmail.com" },
    { name = "Kassapa", email = "ven.kassapa@qq.com" },
]
description = "A rbac service"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "SQLAlchemy",
    "psycopg[binary,pool]",
    "mysql-connector-python",
    "langchain",
]

[project.urls]
Homepage = "https://github.com/iapt-platform/mint/tree/master/sutta-pitaka-importer"
Issues = "https://github.com/iapt-platform/mint/issues"

[project.scripts]
dahlia = "dahlia:main"
